# ros2_turtlebot3

./: .gitignore  Dockerfile  README.md  run_docker.sh
ws_slam/: DEMO_PICK_PLACE.txt  apriltag_trigger_gated.py  apriltag_trigger_keep.py  apriltag_trigger_once.py  detection_gate.py  final_sequencer.py  frames_2026-06-21_14.04.08.gv  full_demo.launch.py  order_planner.py  pick_sequencer.py  smooth_sequencer.py  spawn_blocks.sh  start_demo.sh  start_gazebo.sh  two_block_sequencer.py
ws_slam/apriltag_config/: tags.yaml
ws_slam/apriltag_marker/: model.sdf
ws_slam/apriltag_marker/materials/scripts/: tag0.material
ws_slam/objects/: attach_node.py  blue_block.sdf  color_detector.py  color_pose_detector.py  detect_table.sdf  drop_platform.sdf  frames_2026-06-25_12.18.56.gv  grasp_attach.py  green_block.sdf  pick_table.sdf  pillar.sdf  platform.sdf  reach_table.sdf  red_block.sdf  table.sdf
ws_slam/src/gazebo_grasp_plugin/: CMakeLists.txt  package.xml
ws_slam/src/gazebo_grasp_plugin/src/: grasp_plugin.cpp
ws_slam/worlds/: grasp_world.world
